fixed the masonry collapse

--- a/docroot/sites/all/themes/ambitious/sass/layouts/topic-forum.scss
+++ b/docroot/sites/all/themes/ambitious/sass/layouts/topic-forum.scss
@@ -1353,6 +1353,9 @@ fieldset{
   display:inherit;
   float: left;
 }
+.view-display-id-stream_topic_page .text-block.post{
+  margin-left:1%;
+}
 
 .mobile-view{
    @include breakpoint($mobile){
